--- a/wp-content/themes/conti2wordpress/assets/css/estilosIndex.styl
+++ b/wp-content/themes/conti2wordpress/assets/css/estilosIndex.styl
@@ -147,14 +147,15 @@ body
 	flex-wrap wrap
 	margin-bottom 20px
 	&-titulo
-		width 40%
+		width 43%
 		color #3399cc
 		&_cont
 			margin-top 18%
-			margin-left 48px
+			// margin-left 48px
 			font-family Avenir Heavy
+			font-size 39px
 	&-video
-		width 60%
+		width 57%
 		position relative
 		&-contenedor
 			width 100%
@@ -240,6 +241,16 @@ body
 					margin-bottom 10px
 					padding 10px
 					width 75%
+					&::-webkit-input-placeholder
+						color #333333
+						// font-family Avenir
+						// font-weight 700
+					&:-moz-placeholder
+						color #333333
+					&::-moz-placeholder
+						color #333333
+					&:-ms-input-placeholder
+						color #333333
 			&__bloque3
 				width 100%
 				margin-bottom 15px
@@ -252,6 +263,16 @@ body
 					width 88%
 					padding-top 10px
 					padding-left 10px
+					&::-webkit-input-placeholder
+						color #333333
+						// font-family Avenir
+						// font-weight 700
+					&:-moz-placeholder
+						color #333333
+					&::-moz-placeholder
+						color #333333
+					&:-ms-input-placeholder
+						color #333333
 			&__btn
 				// margin-left 82%
 				border none
@@ -267,26 +288,40 @@ body
 	
 // Section Admisión
 .sectionAdmision
-	margin-bottom 80px
-	&-logoAdmision
-		width 18%
-		margin 0 auto
-		&__img
-			width 100%
-			display block 
-	&-bloque
-		width 65%
-		margin-left auto
-		margin-right auto
-		&__logo
-			width 20%
+	max-width 980px
+	margin-left auto
+	margin-right auto
+	margin-top 65px
+	margin-bottom 70px
+	&-row
+		display flex
+		flex-wrap wrap
+		// border-bottom 2px solid #3399ff
+		margin-bottom 25px
+		margin-top 15px
+		&__contenedorImg
+			width 30%
 			margin 0
-			&__img
-				width 100%
+			img
+				width 52.386%
 				display block
-		&__parrafo
-			width 93%
-			margin 40px auto 20px auto
+				margin-left 15%
+				margin-right auto
+		&__descripcion
+			width 56.7%
+			margin 0
+			font-family Avenir light
+			font-size 13px
+			text-align justify
+			margin-top 3%
+			line-height 18px
+			
+	&-line
+		border 2px solid #3399ff
+		display block
+		width 81.4%
+		margin-left 5%
+			
 			
 // Section Agenda
 .sectionAgenda
@@ -450,603 +485,138 @@ body
 			color rgba(0,0,0,.3)
 			
 // Section Contacto Instituto
-.sectionContactoInsti
-	width 70%
-	margin-right auto
-	margin-left auto
-	margin-top 30px
-	margin-bottom 50px
-	&-logoInsti
-		width 25%
-		margin-left auto
-		margin-right auto
-		margin-top 70px
-		margin-bottom 0
-		&__img
-			width 100%
-	&-logoVisita
-		width 50%
-		margin-left auto
-		margin-right auto
-		margin-top 50px
-		margin-bottom 0
-		&__img
-			width 100%
-	&-parrafoTop
-		font-family Verdana
-		font-size 200
-		margin-top 60px
-	&-logoFormulario
-		width 55%
-		margin-left auto
-		margin-right auto
-		margin-top 50px
-		margin-bottom 0
-		&__img
-			width 100%
-			display block
-	&-formulario
-		background #64cff1
-		width 90%
-		margin-right auto
-		margin-left auto
-		font-family Verdana
-		margin-top 50px
-		display flex
-		flex-wrap wrap
-		padding-bottom 45px
-		position relative
-		&__tituloContenedor
-			// border 1px solid
-			margin-top 10px
-			margin-left 30px
-			width 100%
-			&__titulo
-				margin 0
-				color #454545
-				padding 35px 0 20px 30px
-				// font-size 1rem
-				font-size 1.4rem
-				font-weight 500
-		&__bloque1,
-		&__bloque2
-			width 50%
-			&__input
-				border none
-				display block
-				margin-left 10%
-				margin-bottom 15px
-				padding 10px
-				width 75%
-		&__bloque3
-			width 100%
-			margin-bottom 25px
-			&__textarea
-				border none
-				display block
-				margin-left 5%
-				width 88%
-				padding-top 10px
-				padding-left 10px
-		&__btn
-			// margin-left 82%
-			border none
-			padding 10px 20px 10px 20px
-			display block
-			background #007de3
-			color white
-			border-radius 10px
-			font-size 1.3rem
-			bottom 10px
-			right 20px
-			position absolute
+
 // Section Contacto Universidad
-.sectionContactoUni
-	width 70%
-	margin-right auto
-	margin-left auto
-	margin-top 30px
-	margin-bottom 50px
-	&-logoUni
-		width 25%
-		margin-left auto
-		margin-right auto
-		margin-top 70px
-		margin-bottom 0
-		&__img
-			width 100%
-	&-logoVisita
-		width 50%
-		margin-left auto
-		margin-right auto
-		margin-top 50px
-		margin-bottom 0
-		&__img
-			width 100%
-	&-parrafoTop
-		font-family Verdana
-		font-size 200
-		margin-top 60px
-	&-logoFormulario
-		width 55%
-		margin-left auto
-		margin-right auto
-		margin-top 50px
-		margin-bottom 0
-		&__img
-			width 100%
-			display block
-	&-formulario
-		background #64cff1
-		width 90%
-		margin-right auto
-		margin-left auto
-		font-family Verdana
-		margin-top 50px
-		display flex
-		flex-wrap wrap
-		padding-bottom 45px
-		position relative
-		&__tituloContenedor
-			// border 1px solid
-			margin-top 10px
-			margin-left 30px
-			width 100%
-			&__titulo
-				margin 0
-				color #454545
-				padding 35px 0 20px 30px
-				// font-size 1rem
-				font-size 1.4rem
-				font-weight 500
-		&__bloque1,
-		&__bloque2
-			width 50%
-			&__input
-				border none
-				display block
-				margin-left 10%
-				margin-bottom 15px
-				padding 10px
-				width 75%
-		&__bloque3
-			width 100%
-			margin-bottom 25px
-			&__textarea
-				border none
-				display block
-				margin-left 5%
-				width 88%
-				padding-top 10px
-				padding-left 10px
-		&__btn
-			// margin-left 82%
-			border none
-			padding 10px 20px 10px 20px
-			display block
-			background #007de3
-			color white
-			border-radius 10px
-			font-size 1.3rem
-			bottom 10px
-			right 20px
-			position absolute
 
 // Section Instituto
 .sectionInstituto
-	width 70%
-	// border 1px dotted red
-	margin-right auto
+	max-width 980px
 	margin-left auto
+	margin-right auto
 	margin-top 30px
-	margin-bottom 50px
-	&-logo
-		width 25%
-		margin-left auto
-		margin-right auto
-		&__img
-			width 100%
-	&-parrafoTop
-		font-family Verdana
-		font-size 200
-	
-	//cajas carreras
+	margin-bottom 52px
 	&-carreras
-		&__logoTop
-			display none
-		&__escuelaDiseno,
-		&__escuelaTecnologia,
-		&__escuelaNegocios,
-		&__escuelaGastronomia
-			color white
-			font-family Verdana
-			&__enlacesCarreras
-				// transition 0.7s
-				display none
-				width 100%
-				padding 10px 10px 35px 10px
-				// transition 2s
-				&__link
-					display block
-					text-decoration none
-					color white
-					margin-left 45%
-					padding 5px
-			&__boton
-				position absolute
-				text-decoration none
-				border-radius 10px
-				background-color #0091E3
-				display block
-				color white
-				padding 10px
-				// top 84%
-				bottom -15px
-				right 3%
-		&__escuelaDiseno
-			background-color #575757
+		&__escuela
 			display flex
 			flex-wrap wrap
-			margin-top 60px
-			position relative
+			margin-bottom 20px
 			&__logo
-				position absolute
-				// border 1px dotted blue
 				width 30%
 				margin 0
-				// bottom 10px
-				top -55px
-				left 5%
-				&__img
-					width 100%
-					display block
-								
-			&__frames
-				// border 1px dotted red
-				width 50%
+				img
+					width 84.355%
+			&__contenedorDerecha
+				width 65.409%
 				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
+				max-height 189px
+				flex-wrap wrap
+				// align-items center
+				justify-content center
+				background-color #808080
+				border-radius 5px
+				margin-top 10px
+				&__col
+					// display inline-block
+					width 28.707%
+					margin-top 40px
+					text-align center
+					&__frame
+						margin 0 5px
+						img
+							width 100%
+					&__link
+						text-decoration none
+						color white
+						font-family Avenir Light
+						font-size 13.5px
 						display block
-			
-		&__escuelaTecnologia
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 82px
-			position relative
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				// bottom 10px
-				top -75px
-				left 5%
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
-				
-		&__escuelaNegocios
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 82px
-			position relative
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				left 5%
-				// bottom 0
-				top -65px
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
-		
-		&__escuelaGastronomia
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 82px
-			position relative
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				// bottom 0
-				top -70px
-				left 5%
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
-		
-				
-
+						padding 12px 0
+						transition .5s
+						// &:hover
+						// 	font-size 14.5px
+						// 	transition .5s
 // Section Universidad
 .sectionUniversidad
-	width 70%
-	// border 1px dotted red
+	max-width 936px
+	// border 1px dotted
 	margin-right auto
 	margin-left auto
-	margin-top 30px
-	margin-bottom 50px
-	&-logo
-		width 25%
-		margin-left auto
-		margin-right auto
-		&__img
-			width 100%
-	&-parrafoTop
-		font-family Verdana
-		font-size 200
-	
-	//cajas carreras
-	&-carreras
-		&__logoTop
-			display none
-		&__ingenieria,
-		&__cienciasEmpresa,
-		&__cienciasSalud,
-		&__humanidades,
-		&__derecho
-			color white
-			font-family Verdana
-			&__enlacesCarreras
-				display none
-				width 100%
-				padding 10px 10px 35px 10px
-				// display flex
-				// flex-wrap wrap
-				&__contenedor
+	margin-top 28px
+	&-row
+		display flex
+		flex-wrap wrap
+		align-items center
+		margin-bottom 23px
+		
+		&__contenedorImg
+			width 32%
+			margin 0
+			img
+				width 66.11%
+		&__contenedorDerecha
+			width 68%
+			background-color #838383
+			border-radius 5px
+			padding-top 44px
+			padding-bottom 12px
+			font-family Avenir light
+			&__carreras
+				width 84.529%
+				margin-right auto
+				margin-left auto
+			
+				&__listaContenedor1
+					padding-left 0
 					display flex
 					flex-wrap wrap
-					&__column
+					// display none
+					&__item
+						list-style none
+						width 50%
 						&__link
-							display block
 							text-decoration none
+							display block
 							color white
-							// margin-left 45%
-							padding 7px
-							font-size .8rem
-			&__boton
-				position absolute
-				text-decoration none
-				border-radius 10px
-				background-color #0091E3
-				display block
-				color white
-				padding 10px
-				bottom -15px
-				right 3%
-		&__ingenieria
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 60px
-			position relative
-			&__enlacesCarreras
-				margin-left 20%
-				&__contenedor
-					&__column
-						width 33%
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				top -50px
-				&__img
-					width 100%
-					display block
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block		
-		&__cienciasEmpresa
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 60px
-			position relative
-			&__enlacesCarreras
-				margin-left 45%
-				&__contenedor
-					&__column
+							font-size 13.5px
+							padding 5px
+				&__listaContenedor
+					padding-left 0
+					display flex
+					flex-wrap wrap
+					&__item
+						list-style none
 						width 50%
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
+						&__link
+							text-decoration none
+							display block
+							color white
+							font-size 13.5px
+							padding 5px
+			// #extra1
+			// 	display none
+			&__contenedorImg
 				margin 0
-				top -50px
-				left 5%
-				&__img
-					width 100%
+				img
+					width 84.53%
 					display block
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
+					margin-left auto
+					margin-right auto
+					// margin-top 6.6%
+			&__contenedorBoton
+				text-align right
+				margin-top 16px
+				&__boton
+					// display block
+					text-decoration none
+					color white
+					font-size 13px
+					background #467cdf
+					padding 5px
+					border-radius 5px
+					margin-right 7.6%
 
-		&__cienciasSalud
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 60px
-			position relative
-			&__enlacesCarreras
-				margin-left 45%
-				&__contenedor
-					&__column
-						width 50%
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				top -50px
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
-		&__humanidades
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 60px
-			position relative
-			&__enlacesCarreras
-				margin-left 45%
-				&__contenedor
-					&__column
-						width 100%
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				top -50px
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
-		&__derecho
-			background-color #575757
-			display flex
-			flex-wrap wrap
-			margin-top 60px
-			position relative
-			&__enlacesCarreras
-				margin-left 45%
-				&__column
-					width 100%
-			&__logo
-				position absolute
-				// border 1px dotted blue
-				width 30%
-				margin 0
-				top -50px
-				&__img
-					width 100%
-					display block
-					
-			&__frames
-				// border 1px dotted red
-				width 50%
-				display flex
-				// margin-top 4%
-				margin-right 4%
-				margin-left auto
-				// margin-bottom 4%
-				&__contenedor
-					width 32%
-					margin 32px 10px 32px 0
-					&__img
-						width 100%
-						display block
+
+
 .sectionUniversidadArequipa
 	width 70%
 	// border 1px dotted red
